package goodday;

/**
 * Created by musta on 2017/04/28.
 */
public class GoodDayModel {
}
