package goodday;

public class GoodDayViewController {
}
